fix alignment text

--- a/style.css
+++ b/style.css
@@ -1,15 +1,27 @@
 body{
     background-image: url('img/background.png');
     background-size: cover;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    height: 900px;
+    height: 1000px;
+    padding: 50px;
 }
 #title{
     margin-top: 300px;
     font-size: 50px;
-    color: rgb(230, 139, 36);
+    color: rgb(250, 139, 36);
 }
 .content{
-    color: #fff;
+    color: rgb(165, 94, 12);
 }
+#main-audio{
+    margin: 30px auto;
+}
+.main{
+    text-align: justify;
+    max-width: 500px;
+    
+}
+
